<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/htg"
            android:textColor="@color/jdl"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tbl"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prsg"
                android:id="@+id/prsg"
                android:textColor="@color/txt"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="174dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lkrn"
                android:id="@+id/lkrn"
                android:textColor="@color/txt"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="228dp"
                tools:layout_editor_absoluteY="174dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prsgpjg"
                android:id="@+id/prsgpjg"
                android:textColor="@color/txt"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="264dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sgtg"
                android:id="@+id/sgtg"
                android:textColor="@color/txt"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="249dp"
                tools:layout_editor_absoluteY="339dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trpsm"
                android:id="@+id/trpsm"
                android:textColor="@color/txt"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="133dp"
                tools:layout_editor_absoluteY="444dp" />

        </TableRow>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>